# mc-api

./: .dockerignore  .env.example  .env.production  .env.test  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  pytest.ini
.github/: pull_request_template.md
.github/workflows/: build-and-deploy.yml  build_and_push.yaml  ci.yaml  migrate.yaml  tests.yml
alembic/: env.py
alembic/versions/: 0da0b69b9552_make_user_id_nullable_in_contact.py  1203cb2a9fb9_add_subject_to_contact_table.py  20a7f21f562e_add_token_column_to_verification_code.py  5fe51f3dd69f_create_tables.py  670b5ad262b2_add_columns_to_user.py  7aa956ee80f7_add_indexes_to_account.py  865d77695a50_create_tables.py  a159570c86c3_create_tables.py  a22517529812_.py  a5b5f6c6c1ca_fix_user_unique.py  bc58f003e05a_create_role_table.py  bdae7bf7508a_remove_role_from_session_table.py  bf2fb1569e62_create_user_table.py  c475b0275da4_drop_unique_idx.py  d183b60f6142_add_nullable_columns_to_waitlist.py  db4575e825ea_.py  e03a9eb204d3_create_tables.py
src/: main.py
src/auth/: config.py
src/clients/: cache.py  email.py  storage.py  token.py
src/core/: config.py  constants.py  database.py  deps.py  logger.py
src/models/: account.py  appointment.py  caregiver_availability.py  caregiver_information.py  caregiver_to_specialty.py  careseeker_information.py  careseeker_to_specialty.py  child_dependent.py  contact.py  dependent.py  location.py  pet_dependent.py  role.py  senior_dependent.py  service.py  session.py  specialty.py  user.py  user_information.py  user_to_role.py  verification_code.py  waitlist.py
src/repositories/: account_repository.py  contact_repository.py  role_repository.py  session_repository.py  user_info_repository.py  user_repository.py  user_to_role_repository.py  verification_code_repository.py  waitlist_repository.py
tests/: README.md  conftest.py
(+27 files in other folders)
